# FormaGL

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
Froma/Core/: Camera.cpp  Camera.h  ShaderClass.cpp  ShaderClass.h
Froma/Geometry/: Cube.cpp  Cube.h  GeometryCollection.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
Froma/Renderer/Buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Froma/Renderer/Mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
Froma/Renderer/Skybox/: Skybox.cpp  Skybox.h
assets/models/3D-Character/: license.txt  scene.gltf
shaders/: default.frag  default.vert  light.frag  skybox.frag  skybox.vert
